--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -49,6 +49,7 @@
 				"modules/keyboardNav.js",
 				"modules/about.js",
 				"modules/commandLine.js",
+				"modules/cloudsearch.js",
 				"modules/announcements.js",
 				"modules/selectedEntry.js",
 				"modules/settingsConsole.js",
