--- a/OperaBlink/manifest.json
+++ b/OperaBlink/manifest.json
@@ -48,6 +48,7 @@
 				"modules/keyboardNav.js",
 				"modules/about.js",
 				"modules/commandLine.js",
+				"modules/cloudsearch.js",
 				"modules/announcements.js",
 				"modules/selectedEntry.js",
 				"modules/settingsConsole.js",
