--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -36,6 +36,7 @@
 				"core/migrate.js",
 				"core/storage.js",
 				"core/template.js",
+				"core/query-string-parser.js",
 				"vendor/konami.js",
 				"vendor/hogan-3.0.2.js",
 				"vendor/mediacrush.js",
