--- a/RES.safariextension/Info.plist
+++ b/RES.safariextension/Info.plist
@@ -47,6 +47,7 @@
 				<string>core/migrate.js</string>
 				<string>core/storage.js</string>
 				<string>core/template.js</string>
+				<string>core/query-string-parser.js</string>
 				<string>vendor/konami.js</string>
 				<string>vendor/mediacrush.js</string>
 				<string>vendor/gfycat.js</string>
